# openutm-v0

./: .gitignore  AGENTS.md  LICENSE  README.md  eslint.config.mjs  package.json  plan.md  release-checklist.md  turbo.json
.github/workflows/: ci.yml  release.yml
.sisyphus/drafts/: openutm.md
.sisyphus/notepads/electron-setup/: learnings.md
.sisyphus/notepads/openutm/: task-2.2-completion.md
.sisyphus/notepads/task-2.1-qemu-detection/: COMPLETION_REPORT.md  learnings.md
.sisyphus/plans/: openutm.md
apps/electron/: electron-env.d.ts  index.html  package.json  tailwind.config.js  tsconfig.json  tsconfig.node.json  vite.config.test.ts  vite.config.ts
apps/electron/electron-src/: ipc-handlers.test.ts  ipc-handlers.ts  main.ts  vm-artifacts.test.ts  vm-artifacts.ts
apps/electron/scripts/: build-main.mjs  check-package.mjs  coverage.mjs  dev.mjs  verify-workflow.mjs
apps/electron/src/: asset-path.test.ts  asset-path.ts  main.ts  preload.ts
apps/electron/verification/: checklist.md  detect-with-spice.json  report.md  (+7 more)
apps/tauri/: .gitignore  index.html  package.json  tsconfig.json  vite.config.ts
apps/tauri/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
apps/tauri/src-tauri/src/: commands.rs  error.rs  main.rs
apps/tauri/src-tauri/src/config/: mod.rs
apps/tauri/src-tauri/src/platform/: linux.rs  macos.rs  mod.rs  windows.rs
apps/tauri/src-tauri/src/qemu/: command.rs  controller.rs  detector.rs  mod.rs  qmp.rs
apps/tauri/src-tauri/src/storage/: mod.rs
docs/: framework-comparison.md  macos-verification.md
scripts/: install-macos-apps.sh
(+36 files in other folders)
