[package]
name = "openutm-tauri"
version = "0.1.0"
description = "OpenUTM - Tauri desktop application"
authors = ["OpenUTM Contributors"]
license = "MIT"
repository = "https://github.com/openutm/openutm"
edition = "2021"
rust-version = "1.70"
publish = false

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.0", features = ["shell-open"] }
tokio = { version = "1", features = ["full"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
